--- a/03_Design_Library/01_Observational_Descriptive/01_Random_Sampling.Rmd
+++ b/03_Design_Library/01_Observational_Descriptive/01_Random_Sampling.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Stratified clustered random sampling"
+title: "Random sampling"
 output: html_document
 bibliography: ../../bib/book.bib 
 ---
